--- a/styles/style.css
+++ b/styles/style.css
@@ -9,7 +9,15 @@
     /*    font-family: 'Ubuntu Mono', monospace; */
 }
 
-header nav {
+header {
+    background-color: black;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    height: 800px;
+}
+
+header>div {
     background-image: url('../images/fundo.jpg');
     background-repeat: no-repeat;
     background-position: center;
@@ -20,12 +28,125 @@ header nav {
 }
 
 
+header input {
+    display: none;
+}
 
-#menu a {
+#submenu {
+    position: fixed;
+    z-index: 1;
+    width: 100%;
+    opacity: 0.7;
+
+    display: flex;
+    justify-content: space-evenly;
+    background-color: #152238;
+    color: white;
+    padding: 2%;
+}
+
+#submenu nav {
+    width: 100%;
+    background-color: #152238;
+    color: white;
+    position: absolute;
+    width: 100%;
+}
+
+#submenu input:checked~nav {
+    left: 0;
+    transition: left 2s;
+}
+
+#submenu i {
+    width: 10%;
+    font-size: 2rem;
+    color: white;
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
+#submenu ul {
+    width: 90%;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+#submenu a {
     color: aliceblue;
 }
 
+#fechar {
+    font-size: 0.8rem;
+    background-color: orangered;
+    color: rgb(6, 1, 14);
+}
 
+#lbfechar {
+      
+    position: absolute;
+    top: 0px;
+    left: 90%;;
+}
+
+
+
+#apresentacao {
+    display: flex;
+    align-items: baseline;
+}
+
+#imgFoto {
+    border-radius: 50%;
+}
+
+#saudacao {
+    color: white;
+
+    opacity: 1;
+}
+
+#saudacao h1 {
+    color: #f5ed7e;
+    opacity: 1;
+}
+
+#saudacao button {
+    background-color: #4fdfdf;
+    font-size: large;
+    padding: 10px;
+}
+
+
+#aboutme {
+    display: flex;
+    align-items: center;
+    margin-bottom: 2%;
+}
+
+#projects, #pinturas {
+    text-align: justify;
+    display: flex;
+    align-items: center;
+
+}
+
+.card {
+    /* Add shadows to create the "card" effect */
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
+    transition: 0.3s;
+}
+
+/* On mouse-over, add a deeper shadow */
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+/* Add some padding inside the card container */
+.container {
+    padding: 2px 16px;
+    text-align: center;
+}
 
 
 
@@ -89,31 +210,6 @@ footer img {
 }
 
 
-
-
-/* On mouse-over, add a deeper shadow */
-.card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-}
-
-/* Add some padding inside the card container */
-.container {
-    padding: 2px 16px;
-    text-align: center;
-}
-
-
-th {
-    font-size: 130%;
-    font-weight: bold;
-    padding: 5px 0;
-    background-color: #3f3b80;
-    border: 1px solid #ccc;
-    color: white;
-    
-}
-
-
 table {
     width: 100%;
     margin: 0 auto;
@@ -122,6 +218,16 @@ table {
     border-left: 1px solid #ccc;
     border-right: 1px solid #ccc;
     border-bottom: 1px solid #ccc;
+}
+
+th {
+    font-size: 130%;
+    font-weight: bold;
+    padding: 5px 0;
+    background-color: #3f3b80;
+    border: 1px solid #ccc;
+    color: white;
+
 }
 
 tr, tr {
@@ -137,85 +243,37 @@ td {
     text-align: center;
 }
 
-#menu ul {
-    position: fixed;
-    z-index: 1;
-    width: 100%;
-    opacity: 80%;
 
-    display: flex;
-    justify-content: space-evenly;
-    background-color: #152238;
-    padding: 2%;
-}
-
-
-header {
-    background-color: black;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    height: 800px;
-}
-
-#apresentacao {
-    display: flex;
-    align-items: baseline;
-}
-
-#imgFoto {
-    border-radius: 50%;
-}
-
-#saudacao {
-    color: white;
-
-    opacity: 1;
-}
-
-#saudacao h1 {
-    color: #f5ed7e;
-    opacity: 1;
-}
-
-#saudacao button {
-    background-color: #4fdfdf;
-    font-size: large;
-    padding: 10px;
-}
-
-
-#aboutme {
-    display: flex;
-    align-items: center;
-    margin-bottom: 2%;
-}
-
-#projects, #pinturas {
-    text-align: justify;
-    display: flex;
-    align-items: center;
-
-}
-
-.card {
-    /* Add shadows to create the "card" effect */
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
-    transition: 0.3s;
-}
-
-@media only screen and (min-width: 400px) and (max-width: 719px) {
+@media only screen and (min-width: 200px) and (max-width: 719px) {
 
     header {
         height: 900px;
     }
 
-    #menu ul {
+    #submenu {
+        justify-content: start;
+    }
+
+    #submenu > label {
+        display: block;
+    }
+
+    #submenu nav {
+        left: -100%;
+             
+    }
+
+    #submenu ul {
         flex-direction: column;
     }
 
-    #menu li {
-      font-size: 200%;
+    #submenu li {
+        font-size: 200%;
+        padding: 4% ;
+    }
+
+    #lbfechar{
+        display:block;
     }
 
     #apresentacao {
@@ -243,11 +301,11 @@ header {
         margin: 5px;
     }
 
-    
+
     #divmoto {
         width: 100%;
     }
-    
+
     #imgmMoto {
         border-radius: 10%;
         margin: 20px 5px;
@@ -262,7 +320,7 @@ header {
 
         flex-direction: column;
     }
-    
+
     .card {
         width: 90%;
     }
@@ -273,9 +331,24 @@ header {
     header {
         height: 800px;
     }
+    
 
-    #menu ul {
+    #submenu > label {
+        display: none;
+    }
+
+    #submenu nav {
+        left: 0;
+        padding-bottom: 1%;
+        transition: 0;
+    }
+
+    #submenu ul {
         flex-direction: row;
+    }
+    
+    #lbfechar{
+        display:none;
     }
 
     #apresentacao {
@@ -283,9 +356,6 @@ header {
         justify-content: space-evenly;
         padding: 10% 3% 3% 3%;
     }
-
-
- 
 
     #aboutme {
         flex-direction: row;
@@ -295,18 +365,18 @@ header {
         width: 70%;
         margin: 5px;
     }
-    
+
     #divmoto {
         width: 30%;
     }
-    
+
     #imgmMoto {
         border-radius: 10%;
         margin: 5px;
         width: 90%;
     }
 
-    #divmoto h3{
+    #divmoto h3 {
         display: none;
     }
 
@@ -322,10 +392,10 @@ header {
     .card {
         width: 30%;
     }
-    
+
 }
 
-@media only screen and (min-width: 720px) and (max-width: 2000px) {
+@media only screen and (min-width: 720px) and (max-width: 1800px) {
 
     #apresentacao {
         justify-content: space-evenly;
@@ -335,24 +405,31 @@ header {
     #imgFoto {
         width: 30%;
     }
+
     #saudacao {
         width: 40%;
         font-size: 20px;
     }
 
 }
-@media only screen and (min-width: 2001px)  {
 
+@media only screen and (min-width: 1801px) {
+
+    
+    #apresentacao{
+        flex-direction: row;
+    }
     #apresentacao {
-        padding: 7% 3% 3% 3%;
+        padding: 6% 3% 3% 3%;
     }
 
     #imgFoto {
-        width: 20%;
+        width: 25%;
     }
+
     #saudacao {
         width: 40%;
-        font-size: 30px;
+        font-size: 25px;
     }
 
 }
