--- a/styles/style.css
+++ b/styles/style.css
@@ -245,6 +245,10 @@ td {
     text-align: center;
 }
 
+#professionalback iframe{
+    width: 100%;
+    height: 300px;
+}
 
 @media only screen and (min-width: 200px) and (max-width: 719px) {
 
